--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,21 +1,27 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.lixiang.dailypic2_android.view.fragment.HomeFragment"
-    android:orientation="vertical">
+    tools:context="com.example.lixiang.dailypic2_android.view.fragment.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <com.youth.banner.Banner
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/banner"
         android:layout_width="match_parent"
         android:layout_height="200dp" />
 
     <ListView
+        android:layout_below="@+id/banner"
         android:id="@+id/listview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:divider="@drawable/list_divider"
+        android:dividerHeight="1dp">
     </ListView>
+    <RelativeLayout
+        android:layout_below="@+id/listview"
+        android:background="@color/colorAccent"
+        android:layout_width="wrap_content"
+        android:layout_height="56dp"/>
 
-</LinearLayout>
+</RelativeLayout>
