--- a/app/src/main/res/layout/pic_listview_2.xml
+++ b/app/src/main/res/layout/pic_listview_2.xml
@@ -72,4 +72,10 @@
         android:layout_marginStart="17dp"
         android:layout_marginTop="10dp"
         android:text="脉动地球 · 02-02" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="14dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/pic2date" />
 </RelativeLayout>
