--- a/app/src/main/res/layout/pic_listview_1.xml
+++ b/app/src/main/res/layout/pic_listview_1.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:fresco="http://schemas.android.com/tools">
+    xmlns:fresco="http://schemas.android.com/apk/res-auto">
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/pic1pic"
@@ -15,9 +15,8 @@
         android:layout_marginLeft="18dp"
         android:layout_marginStart="18dp"
         android:layout_marginTop="12dp"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/test"
-        fresco:placeholderImage="@drawable/home_default_2"/>
+        fresco:placeholderImage="@drawable/home_default_2"
+        fresco:roundedCornerRadius="5dp" />
 
     <TextView
         android:id="@+id/pic1name"
