--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -7,7 +7,7 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_standard"
+        android:id="@+id/navigation_pic"
         android:icon="@drawable/pic"
         android:title="@string/title_pic" />
 
@@ -17,7 +17,7 @@
         android:title="@string/title_video" />
 
     <item
-        android:id="@+id/navigation_merge"
+        android:id="@+id/navigation_me"
         android:icon="@drawable/me"
         android:title="@string/title_me" />
 
