--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -5,9 +5,12 @@
     tools:context="com.example.lixiang.dailypic2_android.view.fragment.VideoFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/listview2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:divider="@drawable/list_divider"
+        android:dividerHeight="1dp">
+    </ListView>
 
 </FrameLayout>
