--- a/app/src/main/res/layout/video_listview.xml
+++ b/app/src/main/res/layout/video_listview.xml
@@ -37,6 +37,24 @@
         fresco:placeholderImage="@drawable/video_image"
         fresco:roundedCornerRadius="5dp"/>
 
+    <ImageView
+        android:layout_width="39dp"
+        android:layout_height="39dp"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/play_button"
+        android:layout_marginTop="116dp"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="28dp"
+        android:layout_alignLeft="@+id/videopic"
+        android:layout_alignStart="@+id/videopic"
+        android:layout_marginRight="17dp"
+        android:layout_below="@+id/videoname"
+        android:layout_marginTop="157dp"
+        android:background="@drawable/mask"
+        android:layout_marginEnd="17dp"
+        android:id="@+id/imageView2" />
     <TextView
         android:id="@+id/videodate"
         android:layout_width="wrap_content"
@@ -46,8 +64,7 @@
         android:layout_below="@+id/videopic"
         android:layout_marginLeft="17dp"
         android:layout_marginStart="17dp"
-        android:layout_marginTop="10dp"
-        android:text="脉动地球 · 02-02" />
+        android:layout_marginTop="10dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -55,4 +72,32 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/videodate" />
+
+    <TextView
+        android:id="@+id/playTimes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/videopic"
+        android:layout_alignStart="@+id/videopic"
+        android:layout_alignTop="@+id/imageView2"
+        android:layout_marginTop="6dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginStart="12dp"
+        android:textSize="12dp"
+        android:textColor="#ffffff"
+        />
+
+    <TextView
+        android:id="@+id/duration"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/videopic"
+        android:layout_alignRight="@+id/videopic"
+        android:layout_alignTop="@+id/imageView2"
+        android:layout_marginEnd="12dp"
+        android:layout_marginRight="12dp"
+        android:textSize="12dp"
+        android:textColor="#ffffff"
+        android:layout_marginTop="6dp"
+        />
 </RelativeLayout>
