--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,36 +4,46 @@
     android:layout_height="match_parent"
     tools:context="com.example.lixiang.dailypic2_android.view.fragment.HomeFragment">
 
+
     <!-- TODO: Update blank fragment layout -->
     <com.example.lixiang.dailypic2_android.util.SwipeRefreshView
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <com.youth.banner.Banner
-                android:id="@+id/banner"
-                android:layout_width="match_parent"
-                android:layout_height="200dp" />
+        android:layout_height="wrap_content">
 
-            <ListView
-                android:layout_below="@+id/banner"
-                android:id="@+id/listview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:divider="@drawable/list_divider"
-                android:dividerHeight="1dp">
-            </ListView>
-            <RelativeLayout
-                android:layout_below="@+id/listview"
-                android:background="@color/colorAccent"
-                android:layout_width="wrap_content"
-                android:layout_height="56dp"/>
-        </LinearLayout>
+
+        <ListView
+            android:id="@+id/listview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/banner"
+            android:divider="@drawable/list_divider"
+            android:dividerHeight="1dp"/>
+
+
     </com.example.lixiang.dailypic2_android.util.SwipeRefreshView>
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="56dp"
+        android:layout_below="@+id/swipeRefreshLayout"
+        android:background="@color/colorAccent" />
 
+    <FrameLayout
+        android:id="@+id/no_network"
+        android:visibility="invisible"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="这里空空的" />
+        </RelativeLayout>
+    </FrameLayout>
 </RelativeLayout>
