--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:orientation="vertical">
         <android.support.design.widget.AppBarLayout
             android:id="@+id/appbar"
@@ -33,7 +34,7 @@
                     android:text="星途" />
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
-        <android.support.v4.view.ViewPager
+        <com.example.lixiang.dailypic2_android.util.NoScrollViewPager
             android:id="@+id/main_viewpager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
