--- a/app/src/main/res/layout/fragment_pic_detail_fragment_1.xml
+++ b/app/src/main/res/layout/fragment_pic_detail_fragment_1.xml
@@ -17,6 +17,7 @@
         android:text="费萨拉巴德位于巴基斯坦东北部，总面积5,856平方公里。费萨拉巴德基斯坦东北部，总面积5,856平方公里费费巴德基斯巴德基斯哪坦" />
 
     <TextView
+        android:id="@+id/pic_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/pic_brief"
