--- a/app/src/main/res/layout/fragment_video_detail_fragment_2.xml
+++ b/app/src/main/res/layout/fragment_video_detail_fragment_2.xml
@@ -6,7 +6,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:id="@+id/video_brief"
+        android:id="@+id/video_brief2"
         android:layout_marginTop="17dp"
         android:layout_marginLeft="17dp"
         android:layout_marginRight="17dp"
@@ -17,10 +17,10 @@
         android:text="费萨拉巴德位于巴基斯坦东北部，总面积5,856平方公里。费萨拉巴德基斯坦东北部，总面积5,856平方公里费费巴德基斯巴德基斯哪坦" />
 
     <TextView
-        android:id="@+id/video_date"
+        android:id="@+id/video_date2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/video_brief"
+        android:layout_below="@+id/video_brief2"
         android:layout_marginLeft="17dp"
         android:layout_marginRight="17dp"
         android:layout_marginTop="10dp"
