--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -18,4 +18,22 @@
             android:dividerHeight="1dp"/>
     </com.example.lixiang.dailypic2_android.util.SwipeRefreshView>
 
+    <FrameLayout
+        android:id="@+id/no_network3"
+        android:visibility="invisible"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:textSize="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="这里空空的" />
+        </RelativeLayout>
+    </FrameLayout>
 </FrameLayout>
