--- a/app/src/main/res/layout/activity_pic_detail.xml
+++ b/app/src/main/res/layout/activity_pic_detail.xml
@@ -13,15 +13,15 @@
         android:background="@color/colorPrimary"
         android:layout_height="50dp">
 
-        <Button
+        <ImageButton
             android:id="@+id/back"
             android:layout_width="10dp"
             android:layout_height="17dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="13dp"
-            android:layout_marginStart="13dp"
+            android:layout_marginLeft="17dp"
+            android:layout_marginStart="17dp"
             android:background="@drawable/back" />
         <com.androidkun.xtablayout.XTabLayout
             android:id="@+id/xTablayout"
